infra/k8s/base/auth-users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-users
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-users
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
